[tool.poetry]
name = "day-51-twitter-complaint-bot"
version = "0.1.0"
description = ""
authors = ["ahmad-hassan <skytheispro94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.34.2"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
